--- a/css/overview.css
+++ b/css/overview.css
@@ -8,8 +8,7 @@
   background-repeat: no-repeat;
 
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
 }
 
 .overview::before {
@@ -21,6 +20,13 @@
   background-color: #26272b;
   opacity: 0.8;
   z-index: 1;
+}
+
+.overviewContent {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
 }
 
 .layer {
@@ -43,7 +49,6 @@
 .introduce * {
   font-weight: bold;
   font-size: 80px;
-  font-family: Poppins, "sans-serif";
 }
 
 .nameAndCareer {
