--- a/css/timeline.css
+++ b/css/timeline.css
@@ -1,17 +1,93 @@
 .timeline {
   background: url("../images/timeline_bg.jpeg");
   background-attachment: fixed;
-  height: 100vh;
+  min-height: 100vh;
   position: relative;
+  background-size: cover;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  color: #fff;
+
+  padding: 350px 0px 0px 0px;
 }
 
-.timeline::before {
+.timeline > * {
+  z-index: 2;
+}
+
+.blackFilter::before {
   content: "";
   position: absolute;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   top: 0;
   background-color: #26272b;
   opacity: 0.8;
   z-index: 1;
+}
+
+.standLine {
+  width: 10px;
+  height: 500px;
+  background-color: #fff;
+}
+
+.timelineTitle {
+  font-size: 150px;
+
+  margin-bottom: 500px;
+}
+
+.footerMountain {
+  /* background-image: linear-gradient(#26272b, #26272b),
+    url("../images/mountain-png.png");
+  background-blend-mode: saturation; */
+
+  position: sticky;
+  top: calc(100vh - 220px);
+
+  width: 1000px;
+  height: 220px;
+  background-size: cover;
+  z-index: 3;
+}
+
+.footerMountain::before {
+  z-index: 4;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../images/mountain-png.png");
+  background-size: cover;
+  filter: grayscale(100%);
+}
+
+.timePoint {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  margin: 40px 0px;
+}
+
+.timePoint:nth-last-child(1) {
+  margin-bottom: 400px;
+}
+
+.timePoint p {
+  font-size: 50px;
+}
+
+.timePoint p:nth-child(2) {
+  margin-top: 10px;
+}
+
+.timePoint .longTimePoitnContent {
+  font-size: 30px;
 }
